--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "declarationDir": "./dist/types",
     "isolatedModules": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
     "types": [
       "vite/client"
     ]
